--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+{{#books}}
+<article>
+  <h2>{{title}}</h2>
+  by <strong>{{author}}</strong>
+  <img src="{{book_image}}"/>
+</article>
+{{/books}}
