--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,9 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
 {{#books}}
-<article>
+<article class="book" style="background: url('{{book_image}}') no-repeat; background-size: cover; background-color: black;">
   <h2>{{title}}</h2>
-  by <strong>{{author}}</strong>
-  <img src="{{book_image}}"/>
+  <p>
+    <strong><h3>by {{author}}</h3></strong>
+  </p>
+  <!-- <img src=/> -->
 </article>
 {{/books}}
