--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,4 +9,19 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+
+.book {
+  display: inline-block;
+  width: 50%;
+  color: white;
+  height: 200px;
+  float:left;
+  padding: 20px;
+}
+
+h2 {
+  background-color: rgba(0,0, 0, 0.6);
+  padding: 10px;
 }
